--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <li><a href="#">CONTACT</a></li>
     </ul>
   </div>
+  <div class="bar">
   <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+</div>
   </nav>
      
   <div class="text"> 
