--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="container">
           <div>
-        <img src="./portfolio images/HAJARA.png">
+        <img src="./portfolio images/hajara.png">
         <p class="one">beautiful form template</p>
         <div class="underline"></div>
       </div>
